--- a/assents/Styles/estilos.css
+++ b/assents/Styles/estilos.css
@@ -3,5 +3,43 @@
     padding: 0;
 }
 body{
-    
+
+}
+header{
+    background-color: rgb(0, 0, 0);
+    width: 70px;
+    height: 100vh;
+    border-radius: 40px;
+    margin: 0 0 0 10px;
+    display: flex;
+    flex-direction: column;
+}
+.logo{
+    margin-top: 2px;
+    border-radius: 50px;
+    width: 70px;
+    height: 70px;
+}
+.logo :hover{
+    box-shadow: 0 4 2px crimson;
+}
+nav{
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+nav a{
+    text-decoration: none;
+    margin: 30px 0 30px 0;
+    font-size: 20px;
+    color: chartreuse;
+    width: 70px;
+    height: 70px;
+}
+a :hover{
+    background-color:darkolivegreen;
 }
