--- a/assents/Styles/estilos.css
+++ b/assents/Styles/estilos.css
@@ -3,43 +3,75 @@
     padding: 0;
 }
 body{
-
+    background-color: rgb(37, 37, 37);
 }
 header{
+    position: absolute;
     background-color: rgb(0, 0, 0);
-    width: 70px;
-    height: 100vh;
-    border-radius: 40px;
-    margin: 0 0 0 10px;
+    width: 80px;
+    height: 99vh;
+    border-radius: 50px;
+    margin: 5px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .logo{
-    margin-top: 2px;
+    margin-top: 10px;
+    border-radius: 50px;
+    width: 60px;
+    height: 60px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+
+}
+.logo :hover{
+    box-shadow: 0 0 20px #ccff00;
+}
+.foto{
+    border-radius: 50px;
+    width: 60px;
+    height: 60px;
+}
+nav{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+a{
+    text-decoration: none;
+    color: aliceblue;
+    border-radius: 50px;
+    width: 70px;
+    height: 70px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+a :hover{
+    background-color: #ccff00;
+    box-shadow: 0 0 5px #ccff00;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    border-radius: 50px;
+    width: 70px;
+    height: 70px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+.h22{
+    display: grid;
+    justify-items: center;
+    align-items: center;
     border-radius: 50px;
     width: 70px;
     height: 70px;
 }
-.logo :hover{
-    box-shadow: 0 4 2px crimson;
-}
-nav{
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-nav a{
-    text-decoration: none;
-    margin: 30px 0 30px 0;
-    font-size: 20px;
-    color: chartreuse;
-    width: 70px;
-    height: 70px;
-}
-a :hover{
-    background-color:darkolivegreen;
+.conteiner{
+    background-color: #ccff00;
+    margin-left: 95px;
+    width: 95vw;
+    height: 100vh;
 }
