--- a/assents/Styles/estilos.css
+++ b/assents/Styles/estilos.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 body{
+    background-image: url("../img/05182734a1e86902f139e7f940bd0114.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
